Table spacing fix

--- a/resources/scss/components/_tables.scss
+++ b/resources/scss/components/_tables.scss
@@ -14,3 +14,8 @@ table {
 		background-color: var(--color-contrast-lower);
 	}
 }
+
+th,
+td {
+	padding: var(--space-xxxs);
+}
